# lxqt-mobile-appmenu

./: CMakeLists.txt  README.md
src/: appmenuwindow.cpp  appmenuwindow.h  main.cpp  menuappmap.h  menuappmodel.cpp  menuappmodel.h
src/model/: menuappmap.cpp  menuappmodel.cpp  menucategoriesmodel.cpp  menucategoriesmodel.h
src/utils/: settings.cpp  settings.h
